# advanced_paper_analyzer

./: .readthedocs.yaml  CITATION.cff  README.md  docker-compose.yml  interface.py  mkdocs.yml  pyproject.toml  requirements.txt
Containers/: Dockerfile
Grobid_processed_pdf/: BERT.grobid.tei.xml  Biology_LLM_for_proteine.grobid.tei.xml  Biology_Lysine_Cysteine_Serine_Tryptophan.grobid.tei.xml  Biology_control_molecule.grobid.tei.xml  Biology_proteine_learning.grobid.tei.xml  DEBERTA.grobid.tei.xml  Dino.grobid.tei.xml  ERNIE_2_0.grobid.tei.xml  Lora.grobid.tei.xml  Meson_spectroscopy_lattice_gauge_theories.grobid.tei.xml  Multi_task_learning_vs_continual_learning.grobid.tei.xml  Swin.grobid.tei.xml  Transformers_are_Short_text_Classifiers.grobid.tei.xml  ZeroPose.grobid.tei.xml  asking_before_action.grobid.tei.xml  physics_simulation_of_lattice_gauge.grobid.tei.xml
Scripts/: interface.py  output.ttl  script_KG_creation.py  script_KG_query.py  script_extract_data.py  script_grobit_pdf.py  utils.py
Scripts/KG_server_queries/: script_KG_insertion_data.py  script_KG_query.py
Scripts/create_rdf/: data_toRDF.py  output.ttl  rdfschema.ttl  test.py
Scripts/enriched_kg/: arxiv.txt  authors.py  authors.txt  doi.txt  organization_data.py  organizations.py  organizations.txt  process_grobid_data.py  referenced_papers.py  script_enrich_data.py  utils_request.py
Scripts/similarity/: Script_similarity.py  script_similarity.py
Scripts/topic_modeling/: script_topic_modeling.py
docs/: conf.py  index.html  index.rst
vnc_ubuntu/: Dockerfile  start-vnc.sh
