[tool.poetry]
name = "advanced-paper-analyzer"
version = "0.1.0"
description = ""
authors = ["Tristan Hucher <tristan.hucher@etu.utc.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^5.2.1"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
