[tool.poetry]
name = "advanced-paper-analyzer"
version = "0.1.0"
description = ""
authors = ["Tristan Hucher <tristan.hucher@etu.utc.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
certifi = "^2024.2.2"
chardet = "^5.2.0"
charset-normalizer = "^3.3.2"
colorama = "^0.4.6"
filelock = "^3.14.0"
fsspec = "^2024.5.0"
huggingface-hub = "^0.23.0"
idna = "^3.7"
intel-openmp = "^2021.4.0"
isodate = "^0.6.1"
Jinja2 = "^3.1.4"
joblib = "^1.4.2"
lxml = "^5.2.1"
MarkupSafe = "^2.1.5"
mkl = "^2021.4.0"
mpmath = "^1.3.0"
networkx = "^3.3"
numpy = "^1.26.4"
packaging = "^24.0"
pandas = "^2.2.2"
pillow = "^10.3.0"
pyparsing = "^3.1.2"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
PyYAML = "^6.0.1"
rdflib = "^7.0.0"
regex = "^2024.5.15"
requests = "^2.31.0"
safetensors = "^0.4.3"
scikit-learn = "^1.4.2"
scipy = "^1.13.0"
sentence-transformers = "^2.7.0"
six = "^1.16.0"
SPARQLWrapper = "^2.0.0"
sympy = "^1.12"
tbb = "^2021.12.0"
threadpoolctl = "^3.5.0"
tokenizers = "^0.19.1"
torch = "^2.3.0"
tqdm = "^4.66.4"
transformers = "^4.41.0"
typing_extensions = "^4.11.0"
tzdata = "^2024.1"
urllib3 = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
